
[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
server_type_orchestrator = []
server_type_task_agent = []

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
serde = "1.0.216"
serde_json = "1.0.133"
runautils = { path = "../runautils" }
clap = { version = "4.5.23", features = ["derive"] }
axum = "0.7.9"
